# base-shift

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  additional_information.html  components.html  contribution_guide.html  dev.env  functional_flow.html  genindex.html  index.html  industry_needs_target.html  objects.inv  project.code-workspace  project.root  pyproject.toml  search.html  searchindex.js  setup_tools.html  system_architecture.html  versioning.html
.devcontainer/: devcontainer.json  docker-compose.internal.yml  dockerfile  extensions.json  generate_sonarlint_config.sh  generate_workspace.py  launch.json  settings.json  setup.sh  tasks.json
.github/workflows/: check-submodule-changes.yml  deploy-application-docs.yml  deploy-docs.yml  deploy-root-docs.yml  pr-cleanups.yml  pr-size-label.yml  pr-workflow.yml  reusable-docs-deploy-application-docs.yml  reusable-docs-deploy-root-docs.yml  reusable-pr-cleanups.yml  reusable-pr-initiate.yml  reusable-pr-ongoing.yml
.local/: delete_removed_branches.sh  sonar-base-shift.properties  sonarlint.template.json  whatsmyid.sh
.local/compose/: docker-compose-base.yml  docker-compose-mongo-ui.yml  docker-compose.base.yml
.sonarlint/conf/: sonarlint.json
_sources/: index.rst.txt  setup_tools.rst.txt  system_architecture.rst.txt
applications/only-menu/: README.md
applications/only-menu/backend/: docker-compose.yml  manage.py  pyproject.toml
applications/only-menu/backend/menus/: admin.py  serializers.py  urls.py  viewset.py
applications/only-menu/backend/menus/migrations/: 0001_initial.py
applications/only-menu/backend/menus/models/: __init__.py  category.py  dietary_restriction.py  menu.py  menu_item.py  nutritional_info.py
applications/only-menu/backend/only_menu/: asgi.py  settings.py  urls.py  wsgi.py
applications/only-menu/backend/restaurants/: admin.py  apps.py  serializers.py  urls.py  viewset.py
applications/only-menu/backend/restaurants/migrations/: 0001_initial.py
applications/only-menu/backend/restaurants/models/: __init__.py  restaurant.py
applications/only-menu/backend/utils/: models.py
docs/html/: .buildinfo  additional_information.html  components.html  contribution_guide.html  functional_flow.html  genindex.html  index.html  (+7 more)
frontend/: Dockerfile  package.json
infra/: README.md
only-menu/: architecture.html  caveats.html  components.html  data_flow.html  depenceny-manager.html  genindex.html  index.html  objects.inv  oss_third_party.html  search.html  searchindex.js
only-pos/: feature-space.html  genindex.html  index.html  objects.inv  pos-differentiating-factors.html  salient-features.html  search.html  searchindex.js
services/internal/workflow_manager/: Dockerfile  README.md  pyproject.toml  settings.yml
services/internal/workflow_manager/src/core/services/: job_template.py  pod_management.py  workflow_manager.py
services/internal/workflow_manager/src/core/utils/: cli.py
services/internal/workflow_manager/src/lapi/services/workflow_manager/: __init__.py  application.py
services/internal/workflow_manager/src/lapi/services/workflow_manager/controllers/: general.py  jobs.py  jobs_instances.py  workflows.py
services/internal/workflow_manager/src/lapi/services/workflow_manager/handlers/: events.py  job_instances.py  k8s.py  registry.py
services/internal/workflow_manager/src/lapi/services/workflow_manager/models/: settings.py
services/internal/workflow_manager/src/lapi/services/workflow_manager/services/: job_instances.py  jobs.py  workflows.py
services/internal/workflow_manager/test/: conftest.py  job_controller_test.py  workflow_controller_test.py
services/internal/workflow_manager/test/resources/: prepare-job.ps1  prepare-job.sh  test-projects.json
workflows/: deploy_application_docs.html  pr_size_label.html
(+106 files in other folders)
